Adding a details_from to the agency API response
